fix page overflow

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -833,3 +833,9 @@ iframe {
 .btn-space {
 	margin-left:5px!important;
 }
+
+
+.feature-6 #logo {
+    transform: scale(1.3);
+    overflow: hidden;
+}
